# rust-cpy

./: Cargo.toml  README  output.txt
src/: main.rs
