[package]
name = "rust-cpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "^0.7.8", 	features=["compat"] }
walkdir = "2"
pathdiff = "0.2.1"
anyhow = "^1.0.71"
async-copy-progress = "1.0.1"
clap = {version="4.3.3", features=["derive"]}
pancurses = "0.17.0"
async-channel = "1.8.0"
futures-util = "0.3.28"